--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ button{
     background-color: greenyellow;
     font-style: 25px ;
     color: rgba(75, 75, 119, 0.548);
-    border-radius: 10g%;
+    border-radius: 10%;
 }
 .slider__prev{
     position: absolute;
